0.09000 2011-03-29

    - Updated to work with HTML-FormFu 0.09000
    
    - condition_from_stash now accepts hash from stash, but not from config.

0.08002 2010-09-22

    - Incompatible Change: removed all previously deprecated methods.
    
    - Fix: Was trying to pass undef to NOT NULL columns - changed check from
      ( $is_nullable || ... ) to ( $is_nullable && ... )
      appears to have been unintentionally changed in svn r93 when the code
      was a part of DBIx::Class::HTML::FormFu.
    
    - many-to-many handling with restricting condition tests and code
      to prevent deleting outside of restriction in update code.

    - New 'others' option for Constraint::DBIC::Unique.

    - Constraint::DBIC::Unique tests added.

0.06000 2009-12-10

    - Test suite now uses in-memory SQLite database, so tests can be run in
      parallel.
    
    - many-to-many Checkboxgroup tests.

0.05003 2009-11-25

    - New 'link_values' and 'additive' options for multi-value fields for
      many-to-many relationships.
    
    - Doc updates.

0.05002 2009-07-06

    - Remove prerequisite Test::MockObject - it uses UNIVERSAL::isa which
      was causing test failures.

0.05001 2009-07-03

    - Fix delete_if_true to work inside a surrounding block.
    
    - Made DBIC deletes conditional on row being in_storage.
    
    - Bump DBIx::Class prerequisite to 0.08106, when it switched from using
      DateTime::Format::MySQL to DateTime::Format::SQLite.
    
0.05000 2009-05-26

    - Fix update() "primary key and the foreign key may not be the same column"
      errors.
    
    - options_from_model() 'label_col' works again with non-column accessors.

0.04003 2009-05-10

    - Bumped prerequisite HTML-FormFu to 0.04002

0.04002 2009-05-08

    - New "empty_rows" setting - replaces now deprecated "new_empty_row".
    
    - New "new_rows_max" setting - replaces now deprecated "new_empty_row_multi".
    